--- a/public/olx-result.html
+++ b/public/olx-result.html
@@ -3,27 +3,29 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Результаты парсинга OLX</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css"/>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 </head>
 <body>
-    <h2>Результаты OLX</h2>
-    <table id="results" class="display" style="width:100%">
-        <table border="1" class="dataframe display" id="results">
-  <thead>
-    <tr style="text-align: right;">
-      <th>Название</th>
-      <th>Цена</th>
-      <th>Город</th>
-      <th>Ссылка</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
-    </table>
+    <div class="container py-4">
+        <h2 class="mb-3">Результаты OLX</h2>
+        <table id="results" class="table table-striped display" style="width:100%">
+            <thead>
+              <tr>
+                <th>Название</th>
+                <th>Цена</th>
+                <th>Город</th>
+                <th>Ссылка</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
     <script>
         $(document).ready(function() {
             $('#results').DataTable({
