docs: instructions for GitHub Pages and proxy

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,10 @@
     <tbody></tbody>
   </table>
 
+  <script>
+    // Укажите адрес размещённого прокси
+    window.PROXY_URL = 'https://your-proxy.example.com/offers';
+  </script>
   <script src="app.js"></script>
 
 </body>
