--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.12/jstree.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+  <script>
+    window.PROXY_URL = 'https://<your-worker>.workers.dev/offers';
+  </script>
 </head>
 <body class="container py-4">
   <h2 class="mb-3">Параметры поиска</h2>
