Add sort selection

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,15 @@
       </div>
     </div>
     <div>
+      <label class="form-label">Сортировка:
+        <select name="sort_by" class="form-select w-auto d-inline-block">
+          <option value="created_at:desc">Новые</option>
+          <option value="price:asc">Дешёвые</option>
+          <option value="price:desc">Дорогие</option>
+        </select>
+      </label>
+    </div>
+    <div>
       <label class="form-label">Язык:
         <select name="lang" class="form-select w-auto d-inline-block">
           <option value="uk">uk</option>
