--- a/public/index.html
+++ b/public/index.html
@@ -16,56 +16,86 @@
     window.PROXY_URL = 'https://rapid-bar-2ad1.omkrishna-narayana.workers.dev/offers';
   </script>
 </head>
-<body class="container py-4">
-  <h2 class="mb-3">Параметры поиска</h2>
-  <form id="parserForm" class="vstack gap-3">
-    <div>
-      <label class="form-label">Категория:</label>
-      <div id="category-tree" class="border rounded p-2" style="max-height: 300px; overflow:auto;"></div>
-      <input type="hidden" name="category" value="elektronika/telefony">
+<body class="bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">OLX Парсер</span>
     </div>
-    <div>
-      <label class="form-label">Ключевики:<input type="text" class="form-control" name="keywords" value="iPhone" /></label>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label class="form-label">Цена от:<input type="number" class="form-control" name="price_min" value="3000" /></label>
-      </div>
-      <div class="col">
-        <label class="form-label">Цена до:<input type="number" class="form-control" name="price_max" value="15000" /></label>
-      </div>
-    </div>
-    <div>
-      <label class="form-label">Сортировка:
-        <select name="sort_by" class="form-select w-auto d-inline-block">
-          <option value="created_at:desc">Новые</option>
-          <option value="price:asc">Дешёвые</option>
-          <option value="price:desc">Дорогие</option>
-        </select>
-      </label>
-    </div>
-    <div>
-      <label class="form-label">Язык:
-        <select name="lang" class="form-select w-auto d-inline-block">
-          <option value="uk">uk</option>
-          <option value="ru">ru</option>
-        </select>
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary">Найти</button>
-  </form>
+  </nav>
 
-  <table id="results" class="table table-striped display mt-4" style="width:100%">
-    <thead>
-      <tr>
-        <th>Название</th>
-        <th>Цена</th>
-        <th>Город</th>
-        <th>Ссылка</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <div class="card-header">Параметры поиска</div>
+          <div class="card-body">
+            <form id="parserForm" class="vstack gap-3">
+              <div>
+                <label class="form-label">Категория:</label>
+                <div class="dropdown">
+                  <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="categoryDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    Выберите категорию
+                  </button>
+                  <div class="dropdown-menu p-2" style="width:300px; max-height:300px; overflow:auto;">
+                    <div id="category-tree"></div>
+                  </div>
+                </div>
+                <input type="hidden" name="category" value="elektronika/telefony">
+              </div>
+              <div>
+                <label class="form-label">Ключевики:
+                  <input type="text" class="form-control" name="keywords" value="iPhone" />
+                </label>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <label class="form-label">Цена от:
+                    <input type="number" class="form-control" name="price_min" value="3000" />
+                  </label>
+                </div>
+                <div class="col">
+                  <label class="form-label">Цена до:
+                    <input type="number" class="form-control" name="price_max" value="15000" />
+                  </label>
+                </div>
+              </div>
+              <div>
+                <label class="form-label">Сортировка:
+                  <select name="sort_by" class="form-select w-auto d-inline-block">
+                    <option value="created_at:desc">Новые</option>
+                    <option value="price:asc">Дешёвые</option>
+                    <option value="price:desc">Дорогие</option>
+                  </select>
+                </label>
+              </div>
+              <div>
+                <label class="form-label">Язык:
+                  <select name="lang" class="form-select w-auto d-inline-block">
+                    <option value="uk">uk</option>
+                    <option value="ru">ru</option>
+                  </select>
+                </label>
+              </div>
+              <button type="submit" class="btn btn-primary">Найти</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <table id="results" class="table table-striped display" style="width:100%">
+          <thead>
+            <tr>
+              <th>Название</th>
+              <th>Цена</th>
+              <th>Город</th>
+              <th>Ссылка</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
   <script src="app.js"></script>
 
