--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
     <div class="container-fluid">
       <span class="navbar-brand mb-0 h1">OLX Парсер</span>
+      <button id="testButton" class="btn btn-outline-light ms-auto">Тест</button>
     </div>
   </nav>
 
@@ -96,6 +97,8 @@
       </div>
     </div>
   </div>
+
+  <pre id="logConsole" class="position-fixed top-0 end-0 m-3 p-2 bg-dark text-white border" style="width:300px; height:200px; overflow:auto;"></pre>
 
   <script src="app.js"></script>
 
