--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
   <script>
-    window.PROXY_URL = 'https://rapid-bar-2ad1.omkrishna-narayana.workers.dev/offers';
+    window.PROXY_URL = 'https://<your-name>.workers.dev/offers';
   </script>
 </head>
 <body class="bg-light">
